[package]
name = "rocketmq-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"] }
bytes = "1"
thiserror = "1"
serde = {version = "1", features = ["default", "derive"]}
serde_json = "1"